<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Master Buddy</string>
    <string name="login">Log In</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="details">Details</string>
    <string name="q_a"><![CDATA[Q&A]]></string>
    <string name="click">Click!!</string>
    <string name="customer_name">Customer Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="email_id">Email Id</string>
    <string name="address">Address</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_postal_address">Enter Postal Address</string>
    <string name="done">Done</string>
    <string name="any_comments">Any Comments!!!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="sync">Synchronize Survey</string>
    <string name="file_not_found">File Not Found</string>
    <string name="save_failed">Save Failed</string>
    <string name="got_it">GOT It</string>
    <string name="permissions_warning">Please Go to settings and Grant All Permissions</string>
    <string name="permissions">Permissions Required!!</string>
    <string name="click_sync"><![CDATA[Click & Synchronize]]></string>
    <string name="invalid_email">Invalid Email Id</string>
    <string name="ques_ans"><![CDATA[Question & Answer]]></string>
    <string name="questions_warning">Questions Are Not Over</string>
    <string name="questions_msg">Warning!! Cannot go to next step. Some questions are still left</string>
    <string name="customer_details">Customer Details</string>
    <string name="outlet_name">OutLet Name</string>
    <string name="area">Area</string>
    <string name="enter_area_details">Enter Area Details</string>
    <string name="outlet_details">Outlet Details</string>
    <string name="please_wait_this_might_take_a_while">Please Wait .... This might take a while....</string>
    <string name="cancel_abort">Cancel/Abort</string>
    <string name="warning">Warning!!</string>
    <string name="delete">Delete</string>
    <string name="enter_outlet_name">Enter Outlet Name</string>
    <string name="save">SAVE</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_yes_no">Please select Yes or No, Before going to next Question</string>
    <string name="max_click_over">Maximum six images allowed</string>
    <string name="questions_failed">Unable To get Questions Please Contact Head office</string>
    <string name="data_not_available">Please Turn On your mobile Data</string>
    <string name="server_error">Unable to connect to server .... please contact admin</string>
    <string name="internet_not_available">Internet Connection not available!! Please switch on data connection.</string>
    <string name="try_again">Try Again</string>
    <string name="SignUp">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="rights_reserved">© 2018 Master Buddy All Rights Reserved</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="playlist">Playlist</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="authority">com.example.tanmayagnihotri.masterbuddy.fileprovider</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="error_generic">Playback failed</string>
    <string name="error_unrecognized_abr_algorithm">Unrecognized ABR algorithm</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>
    <string name="download_start_error">Failed to start download</string>
    <string name="download_playlist_unsupported">This demo app does not support downloading playlists</string>
    <string name="download_drm_unsupported">This demo app does not support downloading protected content</string>
    <string name="download_scheme_unsupported">This demo app only supports downloading http streams</string>
    <string name="download_ads_unsupported">IMA does not support offline ads</string>
    <string name="more">More</string>
    <string name="log_out">Log Out</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="videos">Videos</string>
</resources>