<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/Blue"
                android:textSize="40sp"
                android:textStyle="bold|italic"
                app:srcCompat="@drawable/app_logo" />

            <LinearLayout
                android:id="@+id/llLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext_border"
                    android:gravity="center_vertical"
                    android:hint="@string/username"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/DarkGreen"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext_border"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:textColorHint="@color/DarkGreen"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_border"
                    android:gravity="center_vertical"
                    android:hint="@string/name"
                    android:padding="10dp"
                    android:inputType="text"
                    android:textColorHint="@color/DarkGreen"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/edtEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext_border"
                    android:gravity="center_vertical"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColorHint="@color/DarkGreen"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/edtRegPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext_border"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/DarkGreen"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/DarkGreen"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/Yellow"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/DarkGreen"
                    android:text="@string/SignUp"
                    android:textAllCaps="false"
                    android:textColor="@color/Yellow"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/DarkGreen"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/Yellow"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="90dp"
                android:layout_marginEnd="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/Yellow"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pbLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/rights_reserved"
        android:textColor="@color/Yellow"
        android:textSize="12sp" />


</RelativeLayout>
